--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/progressIndicator"
@@ -96,87 +96,31 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.Button.Icon"
             android:id="@+id/btn_login"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_48sdp"
-            android:text="@string/login"
-            android:fontFamily="@font/roboto"
-            android:textStyle="bold"
-            android:backgroundTint="@color/blue"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/tl_password"
-            app:layout_constraintBottom_toTopOf="@id/divider"
             android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:textAllCaps="false"/>
-
-        <LinearLayout
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:paddingHorizontal="24dp"
-            android:layout_marginBottom="@dimen/_8sdp"
-            app:layout_constraintBottom_toTopOf="@id/btn_google"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                app:dividerColor="@color/grey" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_weight=".5"
-                android:fontFamily="@font/roboto"
-                android:textColor="@color/black"
-                android:text="@string/or"/>
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                app:dividerColor="@color/grey" />
-
-        </LinearLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_google"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_44sdp"
-            android:layout_marginHorizontal="@dimen/_16sdp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/blue"
             android:fontFamily="@font/roboto"
-            android:text="@string/login_with_google"
+            android:text="@string/login"
             android:textAllCaps="false"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold"
-            app:icon="@drawable/ic_google"
-            app:iconGravity="textStart"
-            app:iconTintMode="multiply"
-            app:layout_constraintTop_toBottomOf="@id/divider"
-            app:strokeColor="@color/blue"
-            app:strokeWidth="1dp"
-            tools:layout_editor_absoluteX="21dp" />
+            app:layout_constraintTop_toBottomOf="@id/tl_password" />
 
         <LinearLayout
             android:id="@+id/linear_info_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_16sdp"
-            app:layout_constraintTop_toBottomOf="@id/btn_google"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center"
             android:layout_marginHorizontal="@dimen/_16sdp"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/_24sdp"
+            app:layout_constraintTop_toBottomOf="@id/btn_login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <TextView
                 android:id="@+id/tv_info"
@@ -184,17 +128,18 @@
                 android:layout_height="wrap_content"
                 android:text="@string/have_an_account"
                 android:textSize="@dimen/_12ssp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent" />
+
             <TextView
                 android:id="@+id/tv_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:gravity="center_horizontal"
                 android:text="@string/register_here"
                 android:textColor="@color/blue"
                 android:textSize="@dimen/_12ssp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:gravity="center_horizontal"
-                android:layout_marginStart="@dimen/_2sdp"/>
+                app:layout_constraintBottom_toBottomOf="parent" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
